# gweek-binding

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: binding.h  platform.h
include/public/: platform.h
include/public/gweekgl/: platform.h
script/: cpp_output_generator.py  generate_binding.py  opengl_registry.py  out.txt
src/: gl.cpp
